# devotee

./: Cargo.toml  LICENSE  README.md
devotee/: Cargo.toml  LICENSE  README.md
devotee-backend/: Cargo.toml  LICENSE  README.md
devotee-backend-pixels/: Cargo.toml  LICENSE  README.md
devotee-backend-pixels/src/: lib.rs
devotee-backend-softbuffer/: Cargo.toml  README.md
devotee-backend-softbuffer/src/: lib.rs  surface.rs
devotee-backend/src/: lib.rs  middling.rs
devotee/examples/adapting-both/: main.rs
devotee/examples/basic-pixels/: main.rs
devotee/examples/basic-pixels-mapped/: main.rs
devotee/examples/basic-softbuffer-mapped/: main.rs
devotee/examples/bunnymark/: main.rs
devotee/examples/extended/: main.rs
devotee/examples/gears/: main.rs
devotee/examples/gears-soft/: main.rs
devotee/examples/invert/: main.rs
devotee/examples/mandelbrot/: main.rs
devotee/examples/minimal/: main.rs
devotee/examples/nine-ray/: main.rs
devotee/examples/paint/: main.rs
devotee/examples/pentacle/: main.rs
devotee/examples/pixels-basic/: main.rs
devotee/examples/soft-gears/: main.rs
devotee/examples/text/: main.rs
devotee/examples/tilemap/: main.rs
devotee/examples/twister/: main.rs
devotee/src/: app.rs  graphics.rs  input.rs  lib.rs  node.rs  util.rs  visual.rs
devotee/src/app/: config.rs  context.rs  input.rs  mod.rs  root.rs  setup.rs  sound_system.rs  window.rs
devotee/src/app/input/: key_mouse.rs
devotee/src/app/sound_system/: rodio_sound_system.rs
devotee/src/graphics/: ugly_graphics.rs
devotee/src/graphics/ugly_graphics/: surface_adapter.rs
devotee/src/input/: winit_input.rs
devotee/src/math/: mod.rs  vector.rs
devotee/src/util/: getter.rs  vector.rs
devotee/src/visual/: adapter.rs  canvas.rs  color.rs  generalization.rs  image.rs  mod.rs  pixel.rs  sprite.rs  strategy.rs  subpixel.rs  util.rs  view.rs
devotee/src/visual/adapter/: generic.rs
devotee/src/visual/canvas/: box_slice_canvas.rs  index_iteration.rs  mod.rs
devotee/tests/: visual_test.rs
