[package]
name = "devotee-backend-pixels"
version = "0.2.0-beta"
edition = "2021"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Pixels-based backend for devotee project"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devotee"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[dependencies]
devotee-backend = "0.2.0-beta"

pixels = "0.13.0"
winit = { version = "0.29.11", default-features = false, features = ["rwh_05"] }

[features]
default = ["x11"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
