[package]
name = "devotee-backend-pixels"
version = "0.2.0-beta.8"
edition = "2024"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Pixels-based backend for devotee project"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devotee-backend-pixels"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[dependencies]
devotee-backend = { path = "../devotee-backend", version = "0.2.0-beta.3" }

pixels = "0.15.0"
winit = { version = "0.30.9", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.64"
pollster = "0.4.0"

[features]
default = ["x11"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
