[package]
name = "devotee-backend-softbuffer"
version = "0.2.0-beta.2"
edition = "2021"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Softbuffer-based backend for devotee visualization engine"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devotee"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[dependencies]
devotee-backend = { version = "0.2.0-beta.1", features = ["input-context"] }

softbuffer = "0.4.1"
winit = { version = "0.29.11", default-features = false, features = ["rwh_06"] }

[features]
default = ["x11"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
