[package]
name = "devotee-backend-softbuffer"
version = "0.2.0-beta.15"
edition = "2024"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Softbuffer-based backend for devotee visualization engine"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devoteedevotee-backend-softbuffer"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[dependencies]
devotee-backend = { path = "../devotee-backend", version = "0.2.0-beta.4" }

softbuffer = { version = "0.4.6", default-features = false }
winit = { version = "0.30.9", default-features = false, features = ["rwh_06"] }

[features]
default = ["x11"]
x11 = ["winit/x11", "softbuffer/x11"]
wayland = ["winit/wayland", "softbuffer/wayland"]
