[package]
name = "devotee-backend"
version = "0.2.0-beta.2"
edition = "2021"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Backend library specification for the devotee project"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devotee-backend"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[features]
input-context = []
