[package]
name = "devotee"
version = "0.2.0-beta.1"
edition = "2021"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Visualization engine"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devotee"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[features]
default = ["winit-input", "rodio-sound-system"]
rodio-sound-system = ["rodio"]
winit-input = ["winit", "devotee-backend/input-context"]

[dependencies]
devotee-backend = "0.2.0-beta"

winit = { version = "0.29.11", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.17.1", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.17.1", default-features = false, features = [
    "wasm-bindgen",
], optional = true }

[dev-dependencies]
devotee-backend-softbuffer = { version = "0.2.0-beta" }
devotee-backend-pixels = { version = "0.2.0-beta" }
