[package]
name = "devotee"
version = "0.2.0-beta.26"
edition = "2024"
publish = true
authors = ["PSUAN collective", "Hara Red <rtc6fg4.fejg2@gmail.com>"]
description = "Visualization engine"
repository = "https://github.com/PSUAN/devotee"
license = "MIT"
homepage = "https://github.com/PSUAN/devotee"
documentation = "https://docs.rs/devotee"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]

[features]
default = ["rodio-sound-system", "winit-input", "winit-x11"]
rodio-sound-system = ["rodio"]
winit-input = ["winit"]
winit-x11 = ["winit/x11"]
winit-wayland = ["winit/wayland"]

[dependencies]
devotee-backend = { path = "../devotee-backend", version = "0.2.0-beta.7" }

winit = { version = "0.30.9", optional = true, default-features = false, features = [
    "rwh_06",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.21.1", default-features = false, features = [
    "tracing",
    "playback"
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.21.1", default-features = false, features = [
    "tracing",
    "playback",
    "wasm-bindgen",
], optional = true }

[dev-dependencies]
devotee-backend-softbuffer = { path = "../devotee-backend-softbuffer", version = "0.2.0-beta.14" }
devotee-backend-pixels = { path = "../devotee-backend-pixels", version = "0.2.0-beta.15" }
